<resources>
    <string name="app_name">Fis</string>
    <string name="inventory">Inventory</string>

    <string name="pref_key_rear_camera_preview_size" translatable="false">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size" translatable="false">rcpts</string>

    <string name="flash_cd">Toggle flash</string>

    <string name="point_at_barcode">Point me at a barcode!</string>
    <string name="searching">Searching…</string>
    <string name="move_closer">Move me closer!</string>

    <string name="overview_add_new">Add new item</string>
    <string name="overview_overview">Overview</string>
    <string name="overview_editing">Editing current item</string>

    <string name="input_item_info_title">Item Info</string>
    <string name="input_properties_title">Properties</string>
    <string name="input_barcode">Barcode</string>
    <string name="input_title">Name *</string>
    <string name="input_value">Value *</string>
    <string name="input_generic_title">Generic Name</string>
    <string name="input_attributes">Attributes</string>
    <string name="input_quantity">Quantity *</string>

    <string name="add_to_system">Add to system</string>
    <string name="add_to_inventory">Add to Inventory</string>
    <string name="item_info_description">It looks like this item doesn\'t exist in the system yet. Just fill in some basic information below to get started. \nThis can be edited later.</string>
    <string name="item_properties_description">This item doesn\'t exist in the inventory yet. Just fill in the details below. These properties will be able to keep track of whats currently within the household.</string>
    <string name="overview_description">Here is an overview of \'%s\'. Select a quick action below to interact with this item or go back to view the whole inventory.</string>

    <string name="success_inventory">Successfully added item to inventory</string>
    <string name="success_prop_quantity">Successfully updated quantity</string>
    <string name="cd_fruit">Fruit</string>

    <string name="overview_quantity">Quantity: %d</string>
    <string name="add_attribute">Add Attribute</string>
    <string name="no_attributes">Currently no attributes are set</string>
</resources>
